add some ducumenting

--- a/unsupervised-learning/identify_customer_segments/Identify_Customer_Segments.ipynb
+++ b/unsupervised-learning/identify_customer_segments/Identify_Customer_Segments.ipynb
@@ -18,7 +18,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# import libraries here; add more as necessary\n",
@@ -60,7 +62,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Load in the general demographics data.\n",
@@ -766,7 +770,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def is_integer(val):\n",
@@ -780,7 +786,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_missing(miss_label):\n",
@@ -801,7 +809,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Identify missing or unknown data values and convert them to NaNs.\n",
@@ -817,7 +827,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Identify missing or unknown data values and convert them to NaNs.\n",
@@ -827,7 +839,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# this method need more computation time\n",
@@ -845,7 +859,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#azdias = pd.read_csv('azdias_parsed.csv', delimiter=';')"
@@ -1294,7 +1310,14 @@
     "\n",
     "(Double click this cell and replace this text with your own text, reporting your observations regarding the amount of missing data in each column. Are there any patterns in missing values? Which columns were removed from the dataset?)\n",
     "\n",
-    "There are 61 columns with missing values ranging from 0.3% to 99.8%. Look at the figure above, most of columns is between [8%, 20%]. But above 20%, columns have very large percentage of missing vaules, which I think are outliers, So I drop these columns: ['AGER_TYP', 'GEBURTSJAHR', 'TITEL_KZ', 'ALTER_HH', 'KK_KUNDENTYP', 'KBA05_BAUMAX'] "
+    "There are 61 columns with missing values ranging from 0.3% to 99.8%. Look at the figure above, most of columns is between [8%, 20%]. But above 20%, columns have very large percentage of missing vaules, which I think are outliers, So I drop these columns: ['AGER_TYP', 'GEBURTSJAHR', 'TITEL_KZ', 'ALTER_HH', 'KK_KUNDENTYP', 'KBA05_BAUMAX'] \n",
+    "\n",
+    "For the remaining features, many of which had the same amout of missing values:\n",
+    "\n",
+    "1. 'ANZ_PERSONEN', 'SOHO_KZ', 'ANZ_TITEL SOHO_KZ', 'WOHNDAUER_2008': they all been related to household information\n",
+    "2. 'LP_FAMILIE_GROB', 'LP_FAMILIE_FEIN': talked about family type\n",
+    "3. 'PLZ8_ANTG2', 'PLZ8_ANTG3', 'PLZ8_ANTG1', 'PLZ8_ANTG4', 'PLZ8_BAUMAX', 'PLZ8_HHZ', 'PLZ8_GBZ': all about number of family housed in the PLZ8 region\n",
+    "4. 'KBA05_ANTG3', 'KBA05_ANTG2', 'KBA05_ANTG1', 'MOBI_REGIO', 'KBA05_GBZ', 'KBA05_ANTG4': number of different family houses in the microcell"
    ]
   },
   {
@@ -1417,7 +1440,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Write code to divide the data into two subsets based on the number of missing\n",
@@ -1470,7 +1495,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# remove the remaining missing values\n",
@@ -1549,13 +1576,14 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "# Assess categorical variables: which are binary, which are multi-level, and\n",
     "# which one needs to be re-encoded?\n",
-    "def get_categorical(df):\n",
+    "def get_categorical(df, print_flag=False):\n",
     "    categorical_binary = []\n",
     "    categorical_multi  = []\n",
     "    categorical_encode = []\n",
@@ -1571,41 +1599,82 @@
     "                categorical_encode.append(col)\n",
     "            else:\n",
     "                categorical_binary.append(col)\n",
-    "                \n",
+    " \n",
+    "    if print_flag:\n",
+    "        print('Binary categoricals: {}'.format(categorical_binary))\n",
+    "        print('Multi-level categoricals: {}'.format(categorical_multi))\n",
+    "        print('Re-encoded categoricals: {}'.format(categorical_encode))\n",
+    "        \n",
     "    return categorical_binary, categorical_multi, categorical_encode"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def reencode_categ_var(df, print_flag=False):\n",
     "    categorical_binary, categorical_multi, categorical_encode = get_categorical(df)\n",
-    "    if print_flag:\n",
-    "        print('Binary categoricals: {}'.format(categorical_binary))\n",
-    "        print('Multi-level categoricals: {}'.format(categorical_multi))\n",
-    "        print('Re-encoded categoricals: {}'.format(categorical_encode))\n",
     "        \n",
     "    # drop Multi-level categoricals\n",
     "    df.drop(categorical_multi, axis=1, inplace=True)\n",
     "\n",
     "    # Re-encode categorical variable(s) to be kept in the analysis.\n",
-    "    dummies = pd.get_dummies(df[categorical_encode], prefix=categorical_encode)\n",
-    "    df.drop(categorical_encode, axis=1, inplace=True)\n",
-    "    df = df.join(dummies)\n",
+    "    #dummies = pd.get_dummies(df[categorical_encode], prefix=categorical_encode)\n",
+    "    #df.drop(categorical_encode, axis=1, inplace=True)\n",
+    "    #df = df.join(dummies)\n",
+    "    df.loc[df[categorical_encode]=='O', categorical_encode] = 0\n",
+    "    df.loc[df[categorical_encode]=='W', categorical_encode] = 1\n",
     "    \n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "low_row_missing = reencode_categ_var(low_row_missing)"
+    "categorical_binary, categorical_multi, categorical_encode = get_categorical(low_row_missing,True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "low_row_missing.loc[low_row_missing['OST_WEST_KZ'] =='O', 'OST_WEST_KZ'] = 0\n",
+    "low_row_missing.loc[low_row_missing['OST_WEST_KZ'] =='W', 'OST_WEST_KZ'] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "low_row_missing.drop(categorical_multi, axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#low_row_missing = reencode_categ_var(low_row_missing)"
    ]
   },
   {
@@ -1967,7 +2036,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_decade_interval(x):\n",
@@ -2000,7 +2071,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def engineer_mixed_var(df):\n",
@@ -2148,7 +2221,9 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def clean_data(df, columns_drop, row_missing_threshold):\n",
@@ -2202,7 +2277,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# If you've not yet cleaned the dataset of all NaN values, then investigate and\n",
@@ -2216,7 +2293,9 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# has no NaN values, no need to call imputer"
@@ -2225,7 +2304,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Apply feature scaling to the general population demographics data.\n",
@@ -2262,7 +2343,9 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Apply PCA to the data.\n",
@@ -2347,7 +2430,9 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Re-apply PCA to the data while selecting for number of components to retain.\n",
@@ -2650,8 +2735,8 @@
     "\n",
     "We can observe some relaionships between features, which are both positive or negative weights. Also see patterns between features with one's positive weight and the other's negative weight.\n",
     "1. For the first component, ALTERSKATEGORIE_GROB with positive weight and PRAEGENDE_JUGENDJAHRE_DECADE with negative weight. If ALTERSKATEGORIE_GROB goes up, which means older, so decade should be earlier.\n",
-    "2. For the second component, SEMIO_VERT, SEMIO_SOZ, SEMIO_FAM, SEMIO_KULT all have positive weights, which are belong to the same categoriy as shown in the data dictinary. They all have the same trends.\n",
-    "3. For the third component, HH_EINKOMMEN_SCORE and KKK have negtive weights, Apparently they have the same trends"
+    "2. For the second component, SEMIO_VERT, SEMIO_SOZ, SEMIO_FAM, SEMIO_KULT all have positive weights, which are belong to the same categoriy as shown in the data dictinary. They are personality typology for each dimension, so they all have the same trends.\n",
+    "3. For the third component, HH_EINKOMMEN_SCORE and KKK have negative weights, HH_EINKOMMEN_SCORE estimates household net income, KKK means purchasing power in region. Apparently they have the same trends"
    ]
   },
   {
@@ -2673,7 +2758,9 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def clustering (data, clusters):\n",
@@ -2748,7 +2835,9 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Re-fit the k-means model with the selected number of clusters and obtain\n",
@@ -2785,7 +2874,9 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Load in the customer demographics data.\n",
@@ -2878,7 +2969,9 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def inverse_data(scaler, pca, data_pca, data_predict, n_cluster, data_columns):\n",
@@ -4179,6 +4272,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def plot_scaled_comparison(df_sample, pca, kmeans, cluster):\n",
+    "    X = pd.DataFrame.from_dict(dict(zip(df_sample.columns, \n",
+    "                                        pca.inverse_transform(\n",
+    "                                            kmeans.cluster_centers_[cluster]))\n",
+    "                                   ), orient='index'\n",
+    "                              ).rename(columns={0: 'feature_values'}\n",
+    "                              ).sort_values('feature_values', ascending=False)\n",
+    "    X['feature_values_abs'] = abs(X['feature_values'])\n",
+    "    pd.concat((X['feature_values'][:10], X['feature_values'][-10:]), axis=0).plot(kind='barh')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plot_scaled_comparison(customers, customers_clean_pca, kmeans, 6)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -4220,7 +4343,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -4241,7 +4366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
